added school name

--- a/school_website/templates/home/index.html
+++ b/school_website/templates/home/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-8">
-                <h1 class="display-4 fw-bold">Welcome to Our School</h1>
+                <h1 class="display-4 fw-bold">Kinkiizi High School</h1>
                 <p class="lead">Excellence in Education Since 1990</p>
                 <a href="{% url 'about' %}" class="btn btn-light btn-lg mt-3">Learn More About Us</a>
             </div>
