--- a/school_website/templates/gallery/index.html
+++ b/school_website/templates/gallery/index.html
@@ -4,6 +4,9 @@
 
 {% block extra_css %}
 <style>
+    body {
+        background-color: cyan;
+    }
     .gallery-item {
         position: relative;
         overflow: hidden;
