--- a/school_website/templates/contact/index.html
+++ b/school_website/templates/contact/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="container py-5">
-    <h1 class="text-center mb-5">Contact Us</h1>
+    <h1 class="text-center mb-5" style="color: red;">Contact Us</h1>
     
     <div class="row">
         <!-- Contact Information -->
