--- a/school_website/templates/partials/_navbar.html
+++ b/school_website/templates/partials/_navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
+<nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color: #8B4513;">
     <div class="container">
         <a class="navbar-brand" href="{% url 'home' %}">
             <i class="fas fa-school me-2"></i>
