added news template

--- a/school_website/templates/partials/_footer.html
+++ b/school_website/templates/partials/_footer.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4 mb-4">
-                <h5>Our School</h5>
+                <h5>Kinkiizi High School</h5>
                 {% if site_settings and site_settings.school_description %}
                     <p>{{ site_settings.school_description }}</p>
                 {% else %}
