added background color

--- a/school_website/templates/about/index.html
+++ b/school_website/templates/about/index.html
@@ -5,8 +5,8 @@
 
 {% block extra_css %}
 <style>
-    .card-body text-center{
-            background-color: rgb(255, 251, 0);
+    body{
+            background-color: lightyellow;
         }
 </style>
 {% endblock %}
