--- a/school_website/templates/partials/_footer.html
+++ b/school_website/templates/partials/_footer.html
@@ -76,10 +76,10 @@
         <hr class="my-4">
         
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6" style="background-color: #8B4513;">
                 <p>{% if site_settings %}{{ site_settings.copyright_text }}{% else %}&copy; 2024 Our School. All rights reserved.{% endif %}</p>
             </div>
-            <div class="col-md-6 text-md-end">
+            <div class="col-md-6 text-md-end" style="background-color: #8B4513;" >
                 {% if site_settings %}
                     {% if site_settings.privacy_policy_url %}
                         <a href="{{ site_settings.privacy_policy_url }}" class="text-white text-decoration-none me-3">Privacy Policy</a>
