--- a/school_website/templates/academics/index.html
+++ b/school_website/templates/academics/index.html
@@ -2,6 +2,14 @@
 
 {% block title %}Academics - {{ block.super }}{% endblock %}
 
+{% block extra_css %}
+<style>
+    body{
+        background-color: cyan;
+    }
+</style>
+{% endblock %}
+
 {% block content %}
 <div class="container py-5">
     <h1 class="text-center mb-5">Academic Programs</h1>
