--- a/school_website/templates/contact/index.html
+++ b/school_website/templates/contact/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load static %}
+
 {% block title %}Contact Us - {{ block.super }}{% endblock %}
 
 {% block content %}
@@ -11,39 +13,34 @@
         <div class="col-lg-6 mb-5">
             <div class="card h-100">
                 <div class="card-body">
-                    <h3 class="card-title mb-4">Get In Touch</h3>
-                    
+                    <h1 class="card-title mb-4">Get In Touch</h1>
                     {% if contact_info %}
                     <div class="contact-info">
                         <div class="d-flex align-items-center mb-3">
-                            <i class="fas fa-school fa-2x text-primary me-3"></i>
+                            <img src="{% static 'badge.jpeg' %}" alt="School Logo" style="height: 30px; width: auto;" class="me-2">
                             <div>
-                                <h5>School Name</h5>
-                                <p class="mb-0">{{ contact_info.school_name }}</p>
+                                <h3 class="mb-0">{{ contact_info.school_name }}</h3>
                             </div>
                         </div>
                         
                         <div class="d-flex align-items-center mb-3">
                             <i class="fas fa-map-marker-alt fa-2x text-primary me-3"></i>
                             <div>
-                                <h5>Address</h5>
-                                <p class="mb-0">{{ contact_info.address|linebreaks }}</p>
+                                <h4 class="mb-0">{{ contact_info.address|linebreaks }}</h4>
                             </div>
                         </div>
                         
                         <div class="d-flex align-items-center mb-3">
                             <i class="fas fa-phone fa-2x text-primary me-3"></i>
                             <div>
-                                <h5>Phone</h5>
-                                <p class="mb-0">{{ contact_info.phone }}</p>
+                                <h4 class="mb-0">{{ contact_info.phone }}</h4>
                             </div>
                         </div>
                         
                         <div class="d-flex align-items-center mb-3">
                             <i class="fas fa-envelope fa-2x text-primary me-3"></i>
                             <div>
-                                <h5>Email</h5>
-                                <p class="mb-0">{{ contact_info.email }}</p>
+                                <h4 class="mb-0">{{ contact_info.email }}</h4>
                             </div>
                         </div>
                     </div>
