--- a/school_website/templates/partials/_footer.html
+++ b/school_website/templates/partials/_footer.html
@@ -1,4 +1,11 @@
 <!-- templates/partials/_footer.html -->
+ {% block extra_css %}
+<style>
+    h5{
+        color: rgb(160, 23, 202);
+    }
+</style>
+{% endblock %}
 <footer class="bg-dark text-white py-5 mt-5">
     <div class="container">
         <div class="row">
