--- a/school_website/templates/academics/index.html
+++ b/school_website/templates/academics/index.html
@@ -7,6 +7,18 @@
     body{
         background-color: cyan;
     }
+    h1{
+        color: maroon;
+    }
+    h3{
+        color: yellowgreen;
+    }
+    h2{
+        color: blueviolet;
+    }
+    h5{
+        color: rgb(160, 23, 202);
+    }
 </style>
 {% endblock %}
 
@@ -22,60 +34,41 @@
     </div>
 
     <!-- Programs by Level -->
-    <div class="row">
-        <!-- Primary School -->
-        <div class="col-lg-4 mb-4">
+    <div class="row justify-content-center">
+        <!-- Ordinary Level -->
+        <div class="col-lg-5 mb-4">
             <div class="card h-100">
                 <div class="card-body text-center">
-                    <i class="fas fa-pencil-alt fa-3x text-primary mb-3"></i>
-                    <h3>Primary School</h3>
-                    <p>Foundational education for young learners focusing on basic literacy, numeracy, and social skills.</p>
+                    <i class="fas fa-book-open fa-3x text-primary mb-3"></i>
+                    <h3>Ordinary Level</h3>
+                    <p>Lower secondary education focusing on a broad range of core subjects and foundational skills.</p>
                     <ul class="list-unstyled">
-                        <li>Grades 1-5</li>
-                        <li>Age 6-10 years</li>
-                        <li>Comprehensive curriculum</li>
+                        <li>Senior 1 - Senior 4</li>
+                        <li>Strong emphasis on core subjects</li>
+                        <li>Preparation for O-Level examinations</li>
                     </ul>
                 </div>
                 <div class="card-footer text-center">
-                    <a href="{% url 'programs' %}" class="btn btn-outline-primary">Learn More</a>
+                    <a href="{% url 'program_detail' 'ordinary' %}" class="btn btn-outline-primary">Learn More</a>
                 </div>
             </div>
         </div>
 
-        <!-- Secondary School -->
-        <div class="col-lg-4 mb-4">
-            <div class="card h-100">
-                <div class="card-body text-center">
-                    <i class="fas fa-book fa-3x text-primary mb-3"></i>
-                    <h3>Secondary School</h3>
-                    <p>Intermediate education building on foundational knowledge with specialized subject introduction.</p>
-                    <ul class="list-unstyled">
-                        <li>Grades 6-8</li>
-                        <li>Age 11-13 years</li>
-                        <li>Subject specialization</li>
-                    </ul>
-                </div>
-                <div class="card-footer text-center">
-                    <a href="{% url 'programs' %}" class="btn btn-outline-primary">Learn More</a>
-                </div>
-            </div>
-        </div>
-
-        <!-- High School -->
-        <div class="col-lg-4 mb-4">
+        <!-- Advanced Level -->
+        <div class="col-lg-5 mb-4">
             <div class="card h-100">
                 <div class="card-body text-center">
                     <i class="fas fa-graduation-cap fa-3x text-primary mb-3"></i>
-                    <h3>High School</h3>
-                    <p>Advanced education preparing students for higher education and career paths.</p>
+                    <h3>Advanced Level</h3>
+                    <p>Upper secondary education with specialized subject combinations preparing students for tertiary education.</p>
                     <ul class="list-unstyled">
-                        <li>Grades 9-12</li>
-                        <li>Age 14-18 years</li>
-                        <li>College preparation</li>
+                        <li>Senior 5 - Senior 6</li>
+                        <li>Specialized subject combinations</li>
+                        <li>Preparation for A-Level examinations</li>
                     </ul>
                 </div>
                 <div class="card-footer text-center">
-                    <a href="{% url 'programs' %}" class="btn btn-outline-primary">Learn More</a>
+                    <a href="{% url 'program_detail' 'advanced' %}" class="btn btn-outline-primary">Learn More</a>
                 </div>
             </div>
         </div>
