--- a/school_website/templates/base.html
+++ b/school_website/templates/base.html
@@ -11,7 +11,13 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
-    {% block extra_css %}{% endblock %}
+    {% block extra_css %}
+    <style>
+        body{
+            font-family: Arial;
+        }
+    </style>
+    {% endblock %}
 </head>
 <body>
     <!-- Navigation -->
