--- a/school_website/templates/contact/index.html
+++ b/school_website/templates/contact/index.html
@@ -13,7 +13,7 @@
         <div class="col-lg-6 mb-5">
             <div class="card h-100">
                 <div class="card-body">
-                    <h1 class="card-title mb-4">Get In Touch</h1>
+                    <h1 style="color: rgb(0, 128, 90);" class="card-title mb-4">Get In Touch</h1>
                     {% if contact_info %}
                     <div class="contact-info">
                         <div class="d-flex align-items-center mb-3">
@@ -87,7 +87,7 @@
         <div class="col-lg-6">
             <div class="card">
                 <div class="card-body">
-                    <h3 class="card-title mb-4">Send us a Message</h3>
+                    <h3 style="color: rgb(0, 128, 90);" class="card-title mb-4">Send us a Message</h3>
                     
                     <form method="post">
                         {% csrf_token %}
