--- a/school_website/templates/gallery/index.html
+++ b/school_website/templates/gallery/index.html
@@ -22,6 +22,10 @@
     .gallery-item:hover img {
         transform: scale(1.1);
     }
+    h1{
+        color: maroon;
+    }
+    
 </style>
 {% endblock %}
 
